fix comment list spacing

--- a/apps/fishing-map/features/track-correction/TrackCommentsList.module.css
+++ b/apps/fishing-map/features/track-correction/TrackCommentsList.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: var(--space-M);
 }
 
 .item {
